--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sucari.tech",
-  "description": "Sucari Tech Website in English",
+  "description": "Sucari Tech Website in Spanish",
   "version": "1.0.0",
   "private": true,
   "main": "n/a",
