--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@hotform/types": "^1.5.1",
+    "@types/gtag.js": "^0.0.13",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
