--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,37 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "baseUrl": ".",
     "esModuleInterop": true,
-    "jsxImportSource": "@emotion/react",
+    "incremental": true,
+    "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": ["DOM", "ESNext"],
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "noEmit": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "paths": {
-      "@assets/*": ["src/assets/*"],
-      "@components/*": ["src/components/*"],
-      "@config": ["src/config"],
-      "@contexts/*": ["src/contexts/*"],
-      "@head": ["src/head"],
-      "@hooks/*": ["src/hooks/*"],
-      "@layout": ["src/layout"],
-      "@templates/*": ["src/templates/*"],
-      "@theme": ["src/theme"],
-      "@theme/*": ["src/theme/*"]
+      "@/*": ["./src/*"]
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "ESNext"
+    "target": "ES2017",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
-    "src",
-    "gatsby-browser.tsx",
-    "gatsby-config.ts",
-    "gatsby-node.ts",
-    "gatsby-ssr.tsx"
-  ]
+    "**/*.ts",
+    "**/*.tsx",
+    "next-env.d.ts",
+    ".next/dev/types/**/*.ts",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": ["node_modules"]
 }
